# big-data-compression

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  all.csv  build1.sh
GPU/: BatchData.h  BatchDataCPU.cpp  BatchDataCPU.h  CMakeLists.txt  README.md  Read.me  build1.sh  nvcomp_gds  nvcomp_gds.cu  run-loca.sh  util.h
external_tools/: CMakeLists.txt  FASTLZ_PARALLEL.h  bz2_parallel.h  bzib_parallel.h  common.h  decompose-new1.cpp  decompose.h  fastlz.c  lz4_parallel.h  profiling_info.h  snappy_parallel.h  zlib-parallel.h  zstd_parallel.h
modeling/: clustering-p.py  compression_tools.py  utils.py
